src/main/java/com/example/backendtest/modules/tarefa/errors/TarefaNotFound.java
package com.example.backendtest.modules.tarefa.errors;

import com.example.backendtest.errors.EntityNotFound;

public class TarefaNotFound extends EntityNotFound {
    public TarefaNotFound() {
        super("Tarefa não encontrada");
    }
}
